Add second data source to fetch department information

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,7 @@
-spring.datasource.courses.jdbc-url=jdbc:mysql://localhost:3306/courses
-spring.datasource.courses.username=user
+spring.datasource.courses.jdbc-url=jdbc:mysql://localhost:3307/courses
+spring.datasource.courses.username=root
 spring.datasource.courses.password=pass
+
+spring.datasource.departments.jdbc-url=jdbc:mysql://localhost:3307/departments
+spring.datasource.departments.username=root
+spring.datasource.departments.password=pass
