--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=8080
 spring.output.ansi.enabled=ALWAYS
 spring.profiles.active=${SPRING_ENV}
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
