--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,12 @@ spring:
   output:
     ansi:
       enabled: ALWAYS
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+        default-page-size: 10
+        max-page-size: 500
   profiles:
     active: ${SPRING_ENV}
 springdoc:
