--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation 'org.springframework.boot:spring-boot-devtools'
   implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
   implementation 'org.apache.maven.plugins:maven-checkstyle-plugin:3.2.0'
