--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,11 @@ spring:
         one-indexed-parameters: true
         default-page-size: 10
         max-page-size: 500
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 springdoc:
   api-docs:
     path: /api-docs
