--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-devtools'
   implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
   implementation 'org.apache.maven.plugins:maven-checkstyle-plugin:3.2.0'
+  implementation 'junit:junit:4.13.2'
   compileOnly 'org.projectlombok:lombok'
   runtimeOnly 'com.mysql:mysql-connector-j'
   annotationProcessor 'org.projectlombok:lombok'
